Projeto_Compilador/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CONST
    REPEAT
    RETURN
    UNTIL

Grammar

Rule 0     S' -> Program
Rule 1     Program -> PROGRAM ProgramDeclaration
Rule 2     Scope -> ManyDeclarations StatementBlock
Rule 3     Scope -> StatementBlock
Rule 4     TerminalSemicolons -> <empty>
Rule 5     TerminalSemicolons -> SEMICOLON TerminalSemicolons
Rule 6     StatementBlock -> BEGIN END
Rule 7     StatementBlock -> BEGIN ManyStatements TerminalSemicolons END
Rule 8     ManyStatements -> Statement
Rule 9     ManyStatements -> ManyStatements SEMICOLON Statement
Rule 10    Statement -> NoTailStatement
Rule 11    Statement -> IfThen
Rule 12    Statement -> IfThenElse
Rule 13    Statement -> While
Rule 14    Statement -> For
Rule 15    ClosedStatement -> NoTailStatement
Rule 16    ClosedStatement -> ClosedIfThenElse
Rule 17    ClosedStatement -> ClosedWhile
Rule 18    ClosedStatement -> ClosedFor
Rule 19    NoTailStatement -> StatementBlock
Rule 20    NoTailStatement -> Assignment
Rule 21    NoTailStatement -> RoutineCall
Rule 22    Assignment -> DeclaredName ASSIGN Expression
Rule 23    IfThen -> IF Expression THEN Statement
Rule 24    IfThenElse -> IF Expression THEN ClosedStatement ELSE Statement
Rule 25    ClosedIfThenElse -> IF Expression THEN ClosedStatement ELSE ClosedStatement
Rule 26    While -> WHILE Expression DO Statement
Rule 27    ClosedWhile -> WHILE Expression DO ClosedStatement
Rule 28    For -> FOR Assignment TO Expression DO Statement
Rule 29    For -> FOR Assignment DOWNTO Expression DO Statement
Rule 30    ClosedFor -> FOR Assignment TO Expression DO ClosedStatement
Rule 31    ClosedFor -> FOR Assignment DOWNTO Expression DO ClosedStatement
Rule 32    ManyDeclarations -> Declaration
Rule 33    ManyDeclarations -> ManyDeclarations Declaration
Rule 34    Declaration -> VAR VarDeclaration
Rule 35    Declaration -> PROCEDURE ProcedureDeclaration
Rule 36    Declaration -> FUNCTION FunctionDeclaration
Rule 37    VarDeclaration -> ManyParameterTuples SEMICOLON
Rule 38    ProcedureDeclaration -> RoutineHeading SEMICOLON Scope SEMICOLON
Rule 39    FunctionDeclaration -> RoutineHeading ReturnType SEMICOLON Scope SEMICOLON
Rule 40    ProgramDeclaration -> DeclaredName SEMICOLON Scope DOT
Rule 41    RoutineHeading -> DeclaredName RoutineParameters
Rule 42    RoutineParameters -> <empty>
Rule 43    RoutineParameters -> LPAREN RPAREN
Rule 44    RoutineParameters -> LPAREN ManyParameterTuples RPAREN
Rule 45    ManyParameterTuples -> ParameterTuple
Rule 46    ManyParameterTuples -> ManyParameterTuples SEMICOLON ParameterTuple
Rule 47    ParameterTuple -> ManyDeclaredNames ReturnType
Rule 48    ManyDeclaredNames -> DeclaredName
Rule 49    ManyDeclaredNames -> ManyDeclaredNames COMMA DeclaredName
Rule 50    ReturnType -> COLON Type
Rule 51    Type -> SimpleType
Rule 52    Type -> ArrayType
Rule 53    SimpleType -> TYPESTRING
Rule 54    SimpleType -> TYPEINT
Rule 55    SimpleType -> TYPEREAL
Rule 56    SimpleType -> TYPECHAR
Rule 57    SimpleType -> TYPEBOOL
Rule 58    ArrayType -> ARRAY LSPAREN ValueRange RSPAREN OF SimpleType
Rule 59    ValueRange -> ConstantValue DOTDOT ConstantValue
Rule 60    ConstantValue -> LiteralValue
Rule 61    ConstantValue -> DeclaredName
Rule 62    ManyExpressions -> Expression
Rule 63    ManyExpressions -> ManyExpressions COMMA Expression
Rule 64    Expression -> OrExpression
Rule 65    OrExpression -> AndExpression
Rule 66    OrExpression -> OrExpression OR AndExpression
Rule 67    AndExpression -> RelExpression
Rule 68    AndExpression -> AndExpression AND RelExpression
Rule 69    RelExpression -> AddExpression
Rule 70    RelExpression -> RelExpression RelOperator AddExpression
Rule 71    AddExpression -> MultExpression
Rule 72    AddExpression -> AddExpression AddOperator MultExpression
Rule 73    MultExpression -> UnaryExpression
Rule 74    MultExpression -> MultExpression MultOperator UnaryExpression
Rule 75    UnaryExpression -> UnaryOperator UnaryExpression
Rule 76    UnaryExpression -> PrimaryExpression
Rule 77    PrimaryExpression -> LiteralValue
Rule 78    PrimaryExpression -> LPAREN Expression RPAREN
Rule 79    PrimaryExpression -> RoutineCall
Rule 80    PrimaryExpression -> ArrayAccess
Rule 81    PrimaryExpression -> DeclaredName
Rule 82    LiteralValue -> STRINGVALUE
Rule 83    LiteralValue -> CHARVALUE
Rule 84    LiteralValue -> INTVALUE
Rule 85    LiteralValue -> REALVALUE
Rule 86    LiteralValue -> TRUE
Rule 87    LiteralValue -> FALSE
Rule 88    ArrayAccess -> DeclaredName LSPAREN RSPAREN
Rule 89    ArrayAccess -> DeclaredName LSPAREN Expression RSPAREN
Rule 90    DeclaredName -> IDENTIFIER
Rule 91    RelOperator -> EQ
Rule 92    RelOperator -> NEQ
Rule 93    RelOperator -> LT
Rule 94    RelOperator -> GT
Rule 95    RelOperator -> LTE
Rule 96    RelOperator -> GTE
Rule 97    AddOperator -> PLUS
Rule 98    AddOperator -> MINUS
Rule 99    MultOperator -> TIMES
Rule 100   MultOperator -> INTDIV
Rule 101   MultOperator -> REALDIV
Rule 102   MultOperator -> MOD
Rule 103   UnaryOperator -> PLUS
Rule 104   UnaryOperator -> MINUS
Rule 105   UnaryOperator -> NOT
Rule 106   RoutineCall -> DeclaredName LPAREN RPAREN
Rule 107   RoutineCall -> DeclaredName LPAREN ManyExpressions RPAREN

Terminals, with rules where they appear

AND                  : 68
ARRAY                : 58
ASSIGN               : 22
BEGIN                : 6 7
CHARVALUE            : 83
COLON                : 50
COMMA                : 49 63
CONST                : 
DO                   : 26 27 28 29 30 31
DOT                  : 40
DOTDOT               : 59
DOWNTO               : 29 31
ELSE                 : 24 25
END                  : 6 7
EQ                   : 91
FALSE                : 87
FOR                  : 28 29 30 31
FUNCTION             : 36
GT                   : 94
GTE                  : 96
IDENTIFIER           : 90
IF                   : 23 24 25
INTDIV               : 100
INTVALUE             : 84
LPAREN               : 43 44 78 106 107
LSPAREN              : 58 88 89
LT                   : 93
LTE                  : 95
MINUS                : 98 104
MOD                  : 102
NEQ                  : 92
NOT                  : 105
OF                   : 58
OR                   : 66
PLUS                 : 97 103
PROCEDURE            : 35
PROGRAM              : 1
REALDIV              : 101
REALVALUE            : 85
REPEAT               : 
RETURN               : 
RPAREN               : 43 44 78 106 107
RSPAREN              : 58 88 89
SEMICOLON            : 5 9 37 38 38 39 39 40 46
STRINGVALUE          : 82
THEN                 : 23 24 25
TIMES                : 99
TO                   : 28 30
TRUE                 : 86
TYPEBOOL             : 57
TYPECHAR             : 56
TYPEINT              : 54
TYPEREAL             : 55
TYPESTRING           : 53
UNTIL                : 
VAR                  : 34
WHILE                : 26 27
error                : 

Nonterminals, with rules where they appear

AddExpression        : 69 70 72
AddOperator          : 72
AndExpression        : 65 66 68
ArrayAccess          : 80
ArrayType            : 52
Assignment           : 20 28 29 30 31
ClosedFor            : 18
ClosedIfThenElse     : 16
ClosedStatement      : 24 25 25 27 30 31
ClosedWhile          : 17
ConstantValue        : 59 59
Declaration          : 32 33
DeclaredName         : 22 40 41 48 49 61 81 88 89 106 107
Expression           : 22 23 24 25 26 27 28 29 30 31 62 63 78 89
For                  : 14
FunctionDeclaration  : 36
IfThen               : 11
IfThenElse           : 12
LiteralValue         : 60 77
ManyDeclarations     : 2 33
ManyDeclaredNames    : 47 49
ManyExpressions      : 63 107
ManyParameterTuples  : 37 44 46
ManyStatements       : 7 9
MultExpression       : 71 72 74
MultOperator         : 74
NoTailStatement      : 10 15
OrExpression         : 64 66
ParameterTuple       : 45 46
PrimaryExpression    : 76
ProcedureDeclaration : 35
Program              : 0
ProgramDeclaration   : 1
RelExpression        : 67 68 70
RelOperator          : 70
ReturnType           : 39 47
RoutineCall          : 21 79
RoutineHeading       : 38 39
RoutineParameters    : 41
Scope                : 38 39 40
SimpleType           : 51 58
Statement            : 8 9 23 24 26 28 29
StatementBlock       : 2 3 19
TerminalSemicolons   : 5 7
Type                 : 50
UnaryExpression      : 73 74 75
UnaryOperator        : 75
ValueRange           : 58
VarDeclaration       : 34
While                : 13

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . PROGRAM ProgramDeclaration

    PROGRAM         shift and go to state 2

    Program                        shift and go to state 1

state 1

    (0) S' -> Program .



state 2

    (1) Program -> PROGRAM . ProgramDeclaration
    (40) ProgramDeclaration -> . DeclaredName SEMICOLON Scope DOT
    (90) DeclaredName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 5

    ProgramDeclaration             shift and go to state 3
    DeclaredName                   shift and go to state 4

state 3

    (1) Program -> PROGRAM ProgramDeclaration .

    $end            reduce using rule 1 (Program -> PROGRAM ProgramDeclaration .)


state 4

    (40) ProgramDeclaration -> DeclaredName . SEMICOLON Scope DOT

    SEMICOLON       shift and go to state 6


state 5

    (90) DeclaredName -> IDENTIFIER .

    SEMICOLON       reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    ASSIGN          reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    LPAREN          reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    COMMA           reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    COLON           reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    LSPAREN         reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    TIMES           reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    INTDIV          reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    REALDIV         reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    MOD             reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    PLUS            reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    MINUS           reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    EQ              reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    NEQ             reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    LT              reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    GT              reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    LTE             reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    GTE             reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    AND             reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    OR              reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    THEN            reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    DO              reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    RPAREN          reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    END             reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    TO              reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    DOWNTO          reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    ELSE            reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    RSPAREN         reduce using rule 90 (DeclaredName -> IDENTIFIER .)
    DOTDOT          reduce using rule 90 (DeclaredName -> IDENTIFIER .)


state 6

    (40) ProgramDeclaration -> DeclaredName SEMICOLON . Scope DOT
    (2) Scope -> . ManyDeclarations StatementBlock
    (3) Scope -> . StatementBlock
    (32) ManyDeclarations -> . Declaration
    (33) ManyDeclarations -> . ManyDeclarations Declaration
    (6) StatementBlock -> . BEGIN END
    (7) StatementBlock -> . BEGIN ManyStatements TerminalSemicolons END
    (34) Declaration -> . VAR VarDeclaration
    (35) Declaration -> . PROCEDURE ProcedureDeclaration
    (36) Declaration -> . FUNCTION FunctionDeclaration

    BEGIN           shift and go to state 11
    VAR             shift and go to state 12
    PROCEDURE       shift and go to state 13
    FUNCTION        shift and go to state 14

    Scope                          shift and go to state 7
    ManyDeclarations               shift and go to state 8
    StatementBlock                 shift and go to state 9
    Declaration                    shift and go to state 10

state 7

    (40) ProgramDeclaration -> DeclaredName SEMICOLON Scope . DOT

    DOT             shift and go to state 15


state 8

    (2) Scope -> ManyDeclarations . StatementBlock
    (33) ManyDeclarations -> ManyDeclarations . Declaration
    (6) StatementBlock -> . BEGIN END
    (7) StatementBlock -> . BEGIN ManyStatements TerminalSemicolons END
    (34) Declaration -> . VAR VarDeclaration
    (35) Declaration -> . PROCEDURE ProcedureDeclaration
    (36) Declaration -> . FUNCTION FunctionDeclaration

    BEGIN           shift and go to state 11
    VAR             shift and go to state 12
    PROCEDURE       shift and go to state 13
    FUNCTION        shift and go to state 14

    StatementBlock                 shift and go to state 16
    Declaration                    shift and go to state 17

state 9

    (3) Scope -> StatementBlock .

    DOT             reduce using rule 3 (Scope -> StatementBlock .)
    SEMICOLON       reduce using rule 3 (Scope -> StatementBlock .)


state 10

    (32) ManyDeclarations -> Declaration .

    BEGIN           reduce using rule 32 (ManyDeclarations -> Declaration .)
    VAR             reduce using rule 32 (ManyDeclarations -> Declaration .)
    PROCEDURE       reduce using rule 32 (ManyDeclarations -> Declaration .)
    FUNCTION        reduce using rule 32 (ManyDeclarations -> Declaration .)


state 11

    (6) StatementBlock -> BEGIN . END
    (7) StatementBlock -> BEGIN . ManyStatements TerminalSemicolons END
    (8) ManyStatements -> . Statement
    (9) ManyStatements -> . ManyStatements SEMICOLON Statement
    (10) Statement -> . NoTailStatement
    (11) Statement -> . IfThen
    (12) Statement -> . IfThenElse
    (13) Statement -> . While
    (14) Statement -> . For
    (19) NoTailStatement -> . StatementBlock
    (20) NoTailStatement -> . Assignment
    (21) NoTailStatement -> . RoutineCall
    (23) IfThen -> . IF Expression THEN Statement
    (24) IfThenElse -> . IF Expression THEN ClosedStatement ELSE Statement
    (26) While -> . WHILE Expression DO Statement
    (28) For -> . FOR Assignment TO Expression DO Statement
    (29) For -> . FOR Assignment DOWNTO Expression DO Statement
    (6) StatementBlock -> . BEGIN END
    (7) StatementBlock -> . BEGIN ManyStatements TerminalSemicolons END
    (22) Assignment -> . DeclaredName ASSIGN Expression
    (106) RoutineCall -> . DeclaredName LPAREN RPAREN
    (107) RoutineCall -> . DeclaredName LPAREN ManyExpressions RPAREN
    (90) DeclaredName -> . IDENTIFIER

    END             shift and go to state 18
    IF              shift and go to state 29
    WHILE           shift and go to state 30
    FOR             shift and go to state 31
    BEGIN           shift and go to state 11
    IDENTIFIER      shift and go to state 5

    ManyStatements                 shift and go to state 19
    Statement                      shift and go to state 20
    NoTailStatement                shift and go to state 21
    IfThen                         shift and go to state 22
    IfThenElse                     shift and go to state 23
    While                          shift and go to state 24
    For                            shift and go to state 25
    StatementBlock                 shift and go to state 26
    Assignment                     shift and go to state 27
    RoutineCall                    shift and go to state 28
    DeclaredName                   shift and go to state 32

state 12

    (34) Declaration -> VAR . VarDeclaration
    (37) VarDeclaration -> . ManyParameterTuples SEMICOLON
    (45) ManyParameterTuples -> . ParameterTuple
    (46) ManyParameterTuples -> . ManyParameterTuples SEMICOLON ParameterTuple
    (47) ParameterTuple -> . ManyDeclaredNames ReturnType
    (48) ManyDeclaredNames -> . DeclaredName
    (49) ManyDeclaredNames -> . ManyDeclaredNames COMMA DeclaredName
    (90) DeclaredName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 5

    VarDeclaration                 shift and go to state 33
    ManyParameterTuples            shift and go to state 34
    ParameterTuple                 shift and go to state 35
    ManyDeclaredNames              shift and go to state 36
    DeclaredName                   shift and go to state 37

state 13

    (35) Declaration -> PROCEDURE . ProcedureDeclaration
    (38) ProcedureDeclaration -> . RoutineHeading SEMICOLON Scope SEMICOLON
    (41) RoutineHeading -> . DeclaredName RoutineParameters
    (90) DeclaredName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 5

    ProcedureDeclaration           shift and go to state 38
    RoutineHeading                 shift and go to state 39
    DeclaredName                   shift and go to state 40

state 14

    (36) Declaration -> FUNCTION . FunctionDeclaration
    (39) FunctionDeclaration -> . RoutineHeading ReturnType SEMICOLON Scope SEMICOLON
    (41) RoutineHeading -> . DeclaredName RoutineParameters
    (90) DeclaredName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 5

    FunctionDeclaration            shift and go to state 41
    RoutineHeading                 shift and go to state 42
    DeclaredName                   shift and go to state 40

state 15

    (40) ProgramDeclaration -> DeclaredName SEMICOLON Scope DOT .

    $end            reduce using rule 40 (ProgramDeclaration -> DeclaredName SEMICOLON Scope DOT .)


state 16

    (2) Scope -> ManyDeclarations StatementBlock .

    DOT             reduce using rule 2 (Scope -> ManyDeclarations StatementBlock .)
    SEMICOLON       reduce using rule 2 (Scope -> ManyDeclarations StatementBlock .)


state 17

    (33) ManyDeclarations -> ManyDeclarations Declaration .

    BEGIN           reduce using rule 33 (ManyDeclarations -> ManyDeclarations Declaration .)
    VAR             reduce using rule 33 (ManyDeclarations -> ManyDeclarations Declaration .)
    PROCEDURE       reduce using rule 33 (ManyDeclarations -> ManyDeclarations Declaration .)
    FUNCTION        reduce using rule 33 (ManyDeclarations -> ManyDeclarations Declaration .)


state 18

    (6) StatementBlock -> BEGIN END .

    DOT             reduce using rule 6 (StatementBlock -> BEGIN END .)
    SEMICOLON       reduce using rule 6 (StatementBlock -> BEGIN END .)
    END             reduce using rule 6 (StatementBlock -> BEGIN END .)
    ELSE            reduce using rule 6 (StatementBlock -> BEGIN END .)


state 19

    (7) StatementBlock -> BEGIN ManyStatements . TerminalSemicolons END
    (9) ManyStatements -> ManyStatements . SEMICOLON Statement
    (4) TerminalSemicolons -> .
    (5) TerminalSemicolons -> . SEMICOLON TerminalSemicolons

    SEMICOLON       shift and go to state 44
    END             reduce using rule 4 (TerminalSemicolons -> .)

    TerminalSemicolons             shift and go to state 43

state 20

    (8) ManyStatements -> Statement .

    SEMICOLON       reduce using rule 8 (ManyStatements -> Statement .)
    END             reduce using rule 8 (ManyStatements -> Statement .)


state 21

    (10) Statement -> NoTailStatement .

    SEMICOLON       reduce using rule 10 (Statement -> NoTailStatement .)
    END             reduce using rule 10 (Statement -> NoTailStatement .)


state 22

    (11) Statement -> IfThen .

    SEMICOLON       reduce using rule 11 (Statement -> IfThen .)
    END             reduce using rule 11 (Statement -> IfThen .)


state 23

    (12) Statement -> IfThenElse .

    SEMICOLON       reduce using rule 12 (Statement -> IfThenElse .)
    END             reduce using rule 12 (Statement -> IfThenElse .)


state 24

    (13) Statement -> While .

    SEMICOLON       reduce using rule 13 (Statement -> While .)
    END             reduce using rule 13 (Statement -> While .)


state 25

    (14) Statement -> For .

    SEMICOLON       reduce using rule 14 (Statement -> For .)
    END             reduce using rule 14 (Statement -> For .)


state 26

    (19) NoTailStatement -> StatementBlock .

    SEMICOLON       reduce using rule 19 (NoTailStatement -> StatementBlock .)
    END             reduce using rule 19 (NoTailStatement -> StatementBlock .)
    ELSE            reduce using rule 19 (NoTailStatement -> StatementBlock .)


state 27

    (20) NoTailStatement -> Assignment .

    SEMICOLON       reduce using rule 20 (NoTailStatement -> Assignment .)
    END             reduce using rule 20 (NoTailStatement -> Assignment .)
    ELSE            reduce using rule 20 (NoTailStatement -> Assignment .)


state 28

    (21) NoTailStatement -> RoutineCall .

    SEMICOLON       reduce using rule 21 (NoTailStatement -> RoutineCall .)
    END             reduce using rule 21 (NoTailStatement -> RoutineCall .)
    ELSE            reduce using rule 21 (NoTailStatement -> RoutineCall .)


state 29

    (23) IfThen -> IF . Expression THEN Statement
    (24) IfThenElse -> IF . Expression THEN ClosedStatement ELSE Statement
    (64) Expression -> . OrExpression
    (65) OrExpression -> . AndExpression
    (66) OrExpression -> . OrExpression OR AndExpression
    (67) AndExpression -> . RelExpression
    (68) AndExpression -> . AndExpression AND RelExpression
    (69) RelExpression -> . AddExpression
    (70) RelExpression -> . RelExpression RelOperator AddExpression
    (71) AddExpression -> . MultExpression
    (72) AddExpression -> . AddExpression AddOperator MultExpression
    (73) MultExpression -> . UnaryExpression
    (74) MultExpression -> . MultExpression MultOperator UnaryExpression
    (75) UnaryExpression -> . UnaryOperator UnaryExpression
    (76) UnaryExpression -> . PrimaryExpression
    (103) UnaryOperator -> . PLUS
    (104) UnaryOperator -> . MINUS
    (105) UnaryOperator -> . NOT
    (77) PrimaryExpression -> . LiteralValue
    (78) PrimaryExpression -> . LPAREN Expression RPAREN
    (79) PrimaryExpression -> . RoutineCall
    (80) PrimaryExpression -> . ArrayAccess
    (81) PrimaryExpression -> . DeclaredName
    (82) LiteralValue -> . STRINGVALUE
    (83) LiteralValue -> . CHARVALUE
    (84) LiteralValue -> . INTVALUE
    (85) LiteralValue -> . REALVALUE
    (86) LiteralValue -> . TRUE
    (87) LiteralValue -> . FALSE
    (106) RoutineCall -> . DeclaredName LPAREN RPAREN
    (107) RoutineCall -> . DeclaredName LPAREN ManyExpressions RPAREN
    (88) ArrayAccess -> . DeclaredName LSPAREN RSPAREN
    (89) ArrayAccess -> . DeclaredName LSPAREN Expression RSPAREN
    (90) DeclaredName -> . IDENTIFIER

    PLUS            shift and go to state 54
    MINUS           shift and go to state 55
    NOT             shift and go to state 56
    LPAREN          shift and go to state 58
    STRINGVALUE     shift and go to state 62
    CHARVALUE       shift and go to state 63
    INTVALUE        shift and go to state 64
    REALVALUE       shift and go to state 65
    TRUE            shift and go to state 66
    FALSE           shift and go to state 67
    IDENTIFIER      shift and go to state 5

    Expression                     shift and go to state 45
    OrExpression                   shift and go to state 46
    AndExpression                  shift and go to state 47
    RelExpression                  shift and go to state 48
    AddExpression                  shift and go to state 49
    MultExpression                 shift and go to state 50
    UnaryExpression                shift and go to state 51
    UnaryOperator                  shift and go to state 52
    PrimaryExpression              shift and go to state 53
    LiteralValue                   shift and go to state 57
    RoutineCall                    shift and go to state 59
    ArrayAccess                    shift and go to state 60
    DeclaredName                   shift and go to state 61

state 30

    (26) While -> WHILE . Expression DO Statement
    (64) Expression -> . OrExpression
    (65) OrExpression -> . AndExpression
    (66) OrExpression -> . OrExpression OR AndExpression
    (67) AndExpression -> . RelExpression
    (68) AndExpression -> . AndExpression AND RelExpression
    (69) RelExpression -> . AddExpression
    (70) RelExpression -> . RelExpression RelOperator AddExpression
    (71) AddExpression -> . MultExpression
    (72) AddExpression -> . AddExpression AddOperator MultExpression
    (73) MultExpression -> . UnaryExpression
    (74) MultExpression -> . MultExpression MultOperator UnaryExpression
    (75) UnaryExpression -> . UnaryOperator UnaryExpression
    (76) UnaryExpression -> . PrimaryExpression
    (103) UnaryOperator -> . PLUS
    (104) UnaryOperator -> . MINUS
    (105) UnaryOperator -> . NOT
    (77) PrimaryExpression -> . LiteralValue
    (78) PrimaryExpression -> . LPAREN Expression RPAREN
    (79) PrimaryExpression -> . RoutineCall
    (80) PrimaryExpression -> . ArrayAccess
    (81) PrimaryExpression -> . DeclaredName
    (82) LiteralValue -> . STRINGVALUE
    (83) LiteralValue -> . CHARVALUE
    (84) LiteralValue -> . INTVALUE
    (85) LiteralValue -> . REALVALUE
    (86) LiteralValue -> . TRUE
    (87) LiteralValue -> . FALSE
    (106) RoutineCall -> . DeclaredName LPAREN RPAREN
    (107) RoutineCall -> . DeclaredName LPAREN ManyExpressions RPAREN
    (88) ArrayAccess -> . DeclaredName LSPAREN RSPAREN
    (89) ArrayAccess -> . DeclaredName LSPAREN Expression RSPAREN
    (90) DeclaredName -> . IDENTIFIER

    PLUS            shift and go to state 54
    MINUS           shift and go to state 55
    NOT             shift and go to state 56
    LPAREN          shift and go to state 58
    STRINGVALUE     shift and go to state 62
    CHARVALUE       shift and go to state 63
    INTVALUE        shift and go to state 64
    REALVALUE       shift and go to state 65
    TRUE            shift and go to state 66
    FALSE           shift and go to state 67
    IDENTIFIER      shift and go to state 5

    Expression                     shift and go to state 68
    OrExpression                   shift and go to state 46
    AndExpression                  shift and go to state 47
    RelExpression                  shift and go to state 48
    AddExpression                  shift and go to state 49
    MultExpression                 shift and go to state 50
    UnaryExpression                shift and go to state 51
    UnaryOperator                  shift and go to state 52
    PrimaryExpression              shift and go to state 53
    LiteralValue                   shift and go to state 57
    RoutineCall                    shift and go to state 59
    ArrayAccess                    shift and go to state 60
    DeclaredName                   shift and go to state 61

state 31

    (28) For -> FOR . Assignment TO Expression DO Statement
    (29) For -> FOR . Assignment DOWNTO Expression DO Statement
    (22) Assignment -> . DeclaredName ASSIGN Expression
    (90) DeclaredName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 5

    Assignment                     shift and go to state 69
    DeclaredName                   shift and go to state 70

state 32

    (22) Assignment -> DeclaredName . ASSIGN Expression
    (106) RoutineCall -> DeclaredName . LPAREN RPAREN
    (107) RoutineCall -> DeclaredName . LPAREN ManyExpressions RPAREN

    ASSIGN          shift and go to state 71
    LPAREN          shift and go to state 72


state 33

    (34) Declaration -> VAR VarDeclaration .

    BEGIN           reduce using rule 34 (Declaration -> VAR VarDeclaration .)
    VAR             reduce using rule 34 (Declaration -> VAR VarDeclaration .)
    PROCEDURE       reduce using rule 34 (Declaration -> VAR VarDeclaration .)
    FUNCTION        reduce using rule 34 (Declaration -> VAR VarDeclaration .)


state 34

    (37) VarDeclaration -> ManyParameterTuples . SEMICOLON
    (46) ManyParameterTuples -> ManyParameterTuples . SEMICOLON ParameterTuple

    SEMICOLON       shift and go to state 73


state 35

    (45) ManyParameterTuples -> ParameterTuple .

    SEMICOLON       reduce using rule 45 (ManyParameterTuples -> ParameterTuple .)
    RPAREN          reduce using rule 45 (ManyParameterTuples -> ParameterTuple .)


state 36

    (47) ParameterTuple -> ManyDeclaredNames . ReturnType
    (49) ManyDeclaredNames -> ManyDeclaredNames . COMMA DeclaredName
    (50) ReturnType -> . COLON Type

    COMMA           shift and go to state 75
    COLON           shift and go to state 76

    ReturnType                     shift and go to state 74

state 37

    (48) ManyDeclaredNames -> DeclaredName .

    COMMA           reduce using rule 48 (ManyDeclaredNames -> DeclaredName .)
    COLON           reduce using rule 48 (ManyDeclaredNames -> DeclaredName .)


state 38

    (35) Declaration -> PROCEDURE ProcedureDeclaration .

    BEGIN           reduce using rule 35 (Declaration -> PROCEDURE ProcedureDeclaration .)
    VAR             reduce using rule 35 (Declaration -> PROCEDURE ProcedureDeclaration .)
    PROCEDURE       reduce using rule 35 (Declaration -> PROCEDURE ProcedureDeclaration .)
    FUNCTION        reduce using rule 35 (Declaration -> PROCEDURE ProcedureDeclaration .)


state 39

    (38) ProcedureDeclaration -> RoutineHeading . SEMICOLON Scope SEMICOLON

    SEMICOLON       shift and go to state 77


state 40

    (41) RoutineHeading -> DeclaredName . RoutineParameters
    (42) RoutineParameters -> .
    (43) RoutineParameters -> . LPAREN RPAREN
    (44) RoutineParameters -> . LPAREN ManyParameterTuples RPAREN

    SEMICOLON       reduce using rule 42 (RoutineParameters -> .)
    COLON           reduce using rule 42 (RoutineParameters -> .)
    LPAREN          shift and go to state 79

    RoutineParameters              shift and go to state 78

state 41

    (36) Declaration -> FUNCTION FunctionDeclaration .

    BEGIN           reduce using rule 36 (Declaration -> FUNCTION FunctionDeclaration .)
    VAR             reduce using rule 36 (Declaration -> FUNCTION FunctionDeclaration .)
    PROCEDURE       reduce using rule 36 (Declaration -> FUNCTION FunctionDeclaration .)
    FUNCTION        reduce using rule 36 (Declaration -> FUNCTION FunctionDeclaration .)


state 42

    (39) FunctionDeclaration -> RoutineHeading . ReturnType SEMICOLON Scope SEMICOLON
    (50) ReturnType -> . COLON Type

    COLON           shift and go to state 76

    ReturnType                     shift and go to state 80

state 43

    (7) StatementBlock -> BEGIN ManyStatements TerminalSemicolons . END

    END             shift and go to state 81


state 44

    (9) ManyStatements -> ManyStatements SEMICOLON . Statement
    (5) TerminalSemicolons -> SEMICOLON . TerminalSemicolons
    (10) Statement -> . NoTailStatement
    (11) Statement -> . IfThen
    (12) Statement -> . IfThenElse
    (13) Statement -> . While
    (14) Statement -> . For
    (4) TerminalSemicolons -> .
    (5) TerminalSemicolons -> . SEMICOLON TerminalSemicolons
    (19) NoTailStatement -> . StatementBlock
    (20) NoTailStatement -> . Assignment
    (21) NoTailStatement -> . RoutineCall
    (23) IfThen -> . IF Expression THEN Statement
    (24) IfThenElse -> . IF Expression THEN ClosedStatement ELSE Statement
    (26) While -> . WHILE Expression DO Statement
    (28) For -> . FOR Assignment TO Expression DO Statement
    (29) For -> . FOR Assignment DOWNTO Expression DO Statement
    (6) StatementBlock -> . BEGIN END
    (7) StatementBlock -> . BEGIN ManyStatements TerminalSemicolons END
    (22) Assignment -> . DeclaredName ASSIGN Expression
    (106) RoutineCall -> . DeclaredName LPAREN RPAREN
    (107) RoutineCall -> . DeclaredName LPAREN ManyExpressions RPAREN
    (90) DeclaredName -> . IDENTIFIER

    END             reduce using rule 4 (TerminalSemicolons -> .)
    SEMICOLON       shift and go to state 82
    IF              shift and go to state 29
    WHILE           shift and go to state 30
    FOR             shift and go to state 31
    BEGIN           shift and go to state 11
    IDENTIFIER      shift and go to state 5

    Statement                      shift and go to state 83
    TerminalSemicolons             shift and go to state 84
    NoTailStatement                shift and go to state 21
    IfThen                         shift and go to state 22
    IfThenElse                     shift and go to state 23
    While                          shift and go to state 24
    For                            shift and go to state 25
    StatementBlock                 shift and go to state 26
    Assignment                     shift and go to state 27
    RoutineCall                    shift and go to state 28
    DeclaredName                   shift and go to state 32

state 45

    (23) IfThen -> IF Expression . THEN Statement
    (24) IfThenElse -> IF Expression . THEN ClosedStatement ELSE Statement

    THEN            shift and go to state 85


state 46

    (64) Expression -> OrExpression .
    (66) OrExpression -> OrExpression . OR AndExpression
